--- a/themes/hugo-theme-shell-0.1.5/layouts/index.html
+++ b/themes/hugo-theme-shell-0.1.5/layouts/index.html
@@ -42,14 +42,42 @@
         {{ end }}
     {{ end }}
 
+
+
+    {{ $tree2 := "" }}
+    {{ $leaf2 := "" }}
+    {{ if .Site.Params.Tree2.use }}
+    {{ $tree2 = printf "<span id='terminal'>tree ./%s/</span>" .Site.Params.Tree2.folderName | safeHTML}}
+    {{ $leaf2 = printf "%s<strong><span id='dir'>./%s/</span></strong><br>" $leaf2 .Site.Params.Tree2.folderName | safeHTML}}
+        {{ range $index, $val := .Site.Params.Tree2.files }}
+            {{ $ac2 := index $val 0}}
+            {{ $link2 := index $val 1}}
+
+            <!-- pass link (i.e. http, https) and mailto -->
+            {{ $l := $.Site.GetPage $link2 }}
+            {{ if $l }}
+                {{ $link2 = $l.Permalink}}
+            {{ end }}
+            
+            {{ if eq (add $index 1) (len $.Site.Params.Tree2.files) }}
+            {{ $leaf2 = printf "<span id='terminal'>%s└── <a href='%s'>%s</a></span>" $leaf2 $link2 $ac2 | safeHTML}}
+            {{ else }}
+            {{ $leaf2 = printf "<span id='terminal'>%s├── <a href='%s'>%s</a></span><br>" $leaf2 $link2 $ac2 | safeHTML}}
+            {{ end }}
+        {{ end }}
+    {{ end }}
+
+
+
+
     {{ $end := $env }}
 
-    {{ $payload := delimit (slice $cd $cat $description $tree $leaf $end) "" }}
+    {{ $payload := delimit (slice $cd $cat $description $tree $leaf $tree2 $leaf2 $end) "" }}
 
     {{ $ps1Delay := $.Site.Params.Terminal.ps1Delay }}
     {{ $stdoutDelay :=  $.Site.Params.Terminal.stdoutDelay }}
     {{ $commandDelay := $.Site.Params.Terminal.commandDelay }}
 
-    {{ partial "partials/typeIndex.html" (dict "context" . "env" $env "cd" $cd "envWithDir" $envWithDir "cat" $cat "description" $description "tree" $tree "leaf" $leaf "ps1delay" $ps1Delay "stdoutdelay" $stdoutDelay "commanddelay" $commandDelay ) }}
+    {{ partial "partials/typeIndex.html" (dict "context" . "env" $env "cd" $cd "envWithDir" $envWithDir "cat" $cat "description" $description "tree" $tree "leaf" $leaf "ps1delay" $ps1Delay "stdoutdelay" $stdoutDelay "commanddelay" $commandDelay "tree2" $tree2 "leaf2" $leaf2 ) }}
 
 {{ end }}
