--- a/themes/hugo-theme-shell-0.1.5/layouts/partials/typeIndex.html
+++ b/themes/hugo-theme-shell-0.1.5/layouts/partials/typeIndex.html
@@ -4,6 +4,9 @@
 <span id="ps1_03"></span> <span id="tree"></span> <br>
 <span id="std_out_02"></span> <br>
 <span id="ps1_04"></span>
+<span id="ps1_04"></span> <span id="tree2"></span> <br>
+<span id="std_out_03"></span> <br>
+<span id="ps1_05"></span>
 
 <script type="text/javascript">
     async function typewriter(text, elementId, waitAfter) {
@@ -59,6 +62,9 @@
         await typewriter("{{ .envWithDir }}", "ps1_03", ps1Delay); await typewriter("{{ .tree }}", "tree", commandDelay);
         await typewriter("{{ .leaf }}", "std_out_02", stdoutDelay);
         await typewriter("{{ .envWithDir }}", "ps1_04", ps1Delay);
+        await typewriter("{{ .envWithDir }}", "ps1_04", ps1Delay); await typewriter("{{ .tree2 }}", "tree2", commandDelay);
+        await typewriter("{{ .leaf2 }}", "std_out_03", stdoutDelay);
+        await typewriter("{{ .envWithDir }}", "ps1_05", ps1Delay);
         return;
     }
 
