--- a/layouts/typeIndex.html
+++ b/layouts/typeIndex.html
@@ -7,9 +7,12 @@
 <span id="std_out_02"></span> <br>
 <span id="ps1_04"></span>
 
-<span id="ps1_05"></span> <span id="tree2"></span> <br>
+<span id="ps1_05"></span> <span id="cat2"></span> <br>
 <span id="std_out_03"></span> <br>
-<span id="ps1_06"></span>
+
+<span id="ps1_06"></span> <span id="tree2"></span> <br>
+<span id="std_out_04"></span> <br>
+<span id="ps1_07"></span>
 
 <script type="text/javascript">
     async function typewriter(text, elementId, waitAfter) {
@@ -60,14 +63,20 @@
         commandDelay = parseDelay("{{ .commanddelay }}");
     const typeeffetct = async () => {
         await typewriter("{{ .env }}", "ps1_01", ps1Delay); await typewriter("{{ .cd }}", "cd", commandDelay);
+
         await typewriter("{{ .envWithDir }}", "ps1_02", ps1Delay); await typewriter("{{ .cat }}", "cat", commandDelay);
         await typewriter("{{ .description }}", "std_out_01", stdoutDelay);
+
         await typewriter("{{ .envWithDir }}", "ps1_03", ps1Delay); await typewriter("{{ .tree }}", "tree", commandDelay);
         await typewriter("{{ .leaf }}", "std_out_02", stdoutDelay);
         await typewriter("{{ .envWithDir }}", "ps1_04", ps1Delay);
-        await typewriter("{{ .envWithDir }}", "ps1_04", ps1Delay); await typewriter("{{ .tree2 }}", "tree2", commandDelay);
-        await typewriter("{{ .leaf2 }}", "std_out_03", stdoutDelay);
-        await typewriter("{{ .envWithDir }}", "ps1_06", ps1Delay);
+
+        await typewriter("{{ .envWithDir }}", "ps1_05", ps1Delay); await typewriter("{{ .cat2 }}", "cat2", commandDelay);
+        await typewriter("{{ .description2 }}", "std_out_03", stdoutDelay);
+
+        await typewriter("{{ .envWithDir }}", "ps1_06", ps1Delay); await typewriter("{{ .tree2 }}", "tree2", commandDelay);
+        await typewriter("{{ .leaf2 }}", "std_out_04", stdoutDelay);
+        await typewriter("{{ .envWithDir }}", "ps1_07", ps1Delay);
         return;
     }
 
