--- a/layouts/typeIndex.html
+++ b/layouts/typeIndex.html
@@ -74,9 +74,9 @@
         await typewriter("{{ .envWithDir }}", "ps1_05", ps1Delay); await typewriter("{{ .cat2 }}", "cat2", commandDelay);
         await typewriter("{{ .description2 }}", "std_out_03", stdoutDelay);
 
-        await typewriter("{{ .envWithDir }}", "ps1_06", ps1Delay); await typewriter("{{ .tree2 }}", "tree2", commandDelay);
-        await typewriter("{{ .leaf2 }}", "std_out_04", stdoutDelay);
-        await typewriter("{{ .envWithDir }}", "ps1_07", ps1Delay);
+        // await typewriter("{{ .envWithDir }}", "ps1_06", ps1Delay); await typewriter("{{ .tree2 }}", "tree2", commandDelay);
+        // await typewriter("{{ .leaf2 }}", "std_out_04", stdoutDelay);
+        // await typewriter("{{ .envWithDir }}", "ps1_07", ps1Delay);
         return;
     }
 
