--- a/themes/hugo-theme-shell-0.1.5/assets/sass/default.scss
+++ b/themes/hugo-theme-shell-0.1.5/assets/sass/default.scss
@@ -24,6 +24,15 @@ body {
     align-items: center;
 }
 
+code {
+    font-family: ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+    font-size: 12px;
+    padding: .2em .4em;
+    margin: 0;
+    font-size: 85%;
+    border-radius: 6px;
+  }
+
 #content {
     min-width: 82vmin;
     min-height: 82vmin;
@@ -74,3 +83,5 @@ body {
         min-width: 60vmin;
     }
 }
+
+
