--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,9 +35,9 @@
             {{ end }}
             
             {{ if eq (add $index 1) (len $.Site.Params.Tree.files) }}
-            {{ $leaf = printf "<span id='terminal'>%s└── <a href='%s'>%s</a></span>" $leaf $link $ac | safeHTML}}
+            {{ $leaf = printf "<span id='terminal'>%s└── <a href='%s' target='_blank'>%s</a></span>" $leaf $link $ac | safeHTML}}
             {{ else }}
-            {{ $leaf = printf "<span id='terminal'>%s├── <a href='%s'>%s</a></span><br>" $leaf $link $ac | safeHTML}}
+            {{ $leaf = printf "<span id='terminal'>%s├── <a href='%s' target='_blank'>%s</a></span><br>" $leaf $link $ac | safeHTML}}
             {{ end }}
         {{ end }}
     {{ end }}
@@ -63,9 +63,9 @@
             {{ end }}
             
             {{ if eq (add $index 1) (len $.Site.Params.Tree2.files) }}
-            {{ $leaf2 = printf "<span id='terminal'>%s└── <a href='%s'>%s</a></span>" $leaf2 $link2 $ac2 | safeHTML}}
+            {{ $leaf2 = printf "<span id='terminal'>%s└── <a href='%s' target='_blank'>%s</a></span>" $leaf2 $link2 $ac2 | safeHTML}}
             {{ else }}
-            {{ $leaf2 = printf "<span id='terminal'>%s├── <a href='%s'>%s</a></span><br>" $leaf2 $link2 $ac2 | safeHTML}}
+            {{ $leaf2 = printf "<span id='terminal'>%s├── <a href='%s' target='_blank'>%s</a></span><br>" $leaf2 $link2 $ac2 | safeHTML}}
             {{ end }}
         {{ end }}
     {{ end }}
